Upscaled chart image quality

--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -317,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig1.savefig(\"test_1_min_max_mean.png\")\n",
-    "fig2.savefig(\"test_2_min_max_mean.png\")\n",
-    "fig3.savefig(\"test_1_variance_stddev.png\")\n",
-    "fig4.savefig(\"test_2_variance_stddev.png\")"
+    "fig1.savefig(\"test_1_min_max_mean.png\", dpi=400, bbox_inches='tight')\n",
+    "fig2.savefig(\"test_2_min_max_mean.png\", dpi=400, bbox_inches='tight')\n",
+    "fig3.savefig(\"test_1_variance_stddev.png\", dpi=400, bbox_inches='tight')\n",
+    "fig4.savefig(\"test_2_variance_stddev.png\", dpi=400, bbox_inches='tight')"
    ]
   }
  ],
